--- a/test/pom.xml
+++ b/test/pom.xml
@@ -25,7 +25,12 @@
     </plugins>
   </build>
   <dependencies>
-  
+  <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+</dependency>
   
   </dependencies>
 </project>
