--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,12 +7,8 @@ RUN mvn -B -s /usr/share/maven/ref/settings-docker.xml package -DskipTest
 
 FROM tomee:8-jre-7.0.4-plume
 
-# tomcat-users.xml sets up user accounts for the Tomcat manager GUI
-# and script access for Maven deployments
-WORKDIR /usr/local/tomee/
-# copy and deploy application
 WORKDIR /usr/local/tomee/webapps/
-COPY --from=app /usr/src/test/target/test-0.0.1-SNAPSHOT.war .
+COPY --from=app /usr/src/test/target/test-0.0.1-SNAPSHOT.war test.war
 # start tomcat7
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
