--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   test:
     build:
       context: .
-    image: test-tomee
+    image: test
     ports:
       - "8080:8080"
     networks:
